Fixes main-content overflowing viewport width issue

--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@
 }
 
 #main-content {
-    width: 100%;
+    max-width: 100%;
     height: 100vh;
     margin-left: 300px;
     background-color: blue;
